--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "YourConnectionString": "Server=.;Database = graduationDB;Trusted_Connection = True;TrustServerCertificate=True;"
+  }
 }
