add_DbContext_to_program.cs

--- a/appsettings.json
+++ b/appsettings.json
@@ -6,7 +6,8 @@
     }
   },
   "AllowedHosts": "*",
+
   "ConnectionStrings": {
-    "YourConnectionString": "Server=.;Database = graduationDB;Trusted_Connection = True;TrustServerCertificate=True;"
+    "DefaultConnection": "Server=.;Database = graduationDB;Trusted_Connection = True;TrustServerCertificate=True;"
   }
 }
